--- a/src/Talabi.Portal/Views/Locations/CityDetails.cshtml
+++ b/src/Talabi.Portal/Views/Locations/CityDetails.cshtml
@@ -88,8 +88,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@LocalizationService.GetString("Close")</button>
+                    <button type="submit" class="btn btn-primary">@LocalizationService.GetString("Save")</button>
                 </div>
             </form>
         </div>
@@ -121,8 +121,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Update</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@LocalizationService.GetString("Close")</button>
+                    <button type="submit" class="btn btn-primary">@LocalizationService.GetString("Update")</button>
                 </div>
             </form>
         </div>
@@ -138,7 +138,7 @@
         $(document).ready(function() {
             $('#districtsTable').DataTable({
                 "language": {
-                     "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/tr.json"
+                     "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/" + ('@System.Globalization.CultureInfo.CurrentCulture.Name' === 'tr-TR' ? 'tr' : 'en-GB') + ".json"
                 }
             });
         });
