--- a/src/Talabi.Portal/Views/Coupons/Edit.cshtml
+++ b/src/Talabi.Portal/Views/Coupons/Edit.cshtml
@@ -119,6 +119,11 @@
                                     <input asp-for="EndTime" class="form-control" type="time" />
                                 </div>
                             </div>
+
+                            <div class="mb-3 form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="IsFirstOrderOnly" />
+                                <label class="form-check-label" asp-for="IsFirstOrderOnly">@LocalizationService.GetString("FirstOrderOnly")</label>
+                            </div>
                         </div>
 
                         <!-- Relations Tab -->
