--- a/src/Talabi.Portal/Views/Campaigns/Edit.cshtml
+++ b/src/Talabi.Portal/Views/Campaigns/Edit.cshtml
@@ -71,6 +71,21 @@
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
+                                    <label asp-for="DiscountType" class="form-label">@LocalizationService.GetString("DiscountType")</label>
+                                    <select asp-for="DiscountType" class="form-select">
+                                        <option value="0">@LocalizationService.GetString("Percentage") (%)</option>
+                                        <option value="1">@LocalizationService.GetString("FixedAmount")</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <label asp-for="DiscountValue" class="form-label">@LocalizationService.GetString("DiscountValue")</label>
+                                    <input asp-for="DiscountValue" class="form-control" type="number" step="0.01" />
+                                    <span asp-validation-for="DiscountValue" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-md-6">
                                     <label asp-for="StartDate" class="form-label">@LocalizationService.GetString("StartDate")</label>
                                     <input asp-for="StartDate" class="form-control" type="datetime-local" />
                                     <span asp-validation-for="StartDate" class="text-danger"></span>
