--- a/MerchantPortal/Views/Merchant/Edit.cshtml
+++ b/MerchantPortal/Views/Merchant/Edit.cshtml
@@ -92,21 +92,25 @@
                 </h5>
 
                 <div class="row">
-                    <div class="col-md-4 mb-3">
+                    @*
+                        Disabling Minimum Order Amount as per request
+                        <div class="col-md-4 mb-3">
                         <label asp-for="MinimumOrderAmount" class="form-label">
                             @LocalizationService.GetString("MinimumOrderAmount") (₺) *
                         </label>
                         <input asp-for="MinimumOrderAmount" type="number" step="0.01" class="form-control" placeholder="50.00" />
                         <span asp-validation-for="MinimumOrderAmount" class="text-danger"></span>
-                    </div>
+                    </div> *@
 
-                    <div class="col-md-4 mb-3">
+                    @* 
+                        Disabling Delivery Fee as per request
+                        <div class="col-md-4 mb-3">
                         <label asp-for="DeliveryFee" class="form-label">
                             @LocalizationService.GetString("DeliveryFee") (₺) *
                         </label>
                         <input asp-for="DeliveryFee" type="number" step="0.01" class="form-control" placeholder="9.99" />
                         <span asp-validation-for="DeliveryFee" class="text-danger"></span>
-                    </div>
+                    </div> *@
 
                     <div class="col-md-4 mb-3">
                         <label asp-for="AverageDeliveryTime" class="form-label">
