system settingsi force updatedi teslimat ücreti, satıcı ve kurye shamcash hesap numarası ekleme

--- a/src/Talabi.Portal/Views/Shared/_Layout.cshtml
+++ b/src/Talabi.Portal/Views/Shared/_Layout.cshtml
@@ -397,6 +397,9 @@
                     <a href="@Url.Action("Index", "Locations")">
                         <i class="fas fa-globe"></i> @LocalizationService.GetString("Countries")
                     </a>
+                    <a href="@Url.Action("Index", "SystemSettings")">
+                        <i class="fas fa-cogs"></i> @LocalizationService.GetString("SystemSettings")
+                    </a>
                 }
                 <a href="@Url.Action("Index", "Notifications")">
                     <i class="fas fa-bell"></i> @LocalizationService.GetString("Notifications")
