--- a/src/Talabi.Portal/Views/Campaigns/Create.cshtml
+++ b/src/Talabi.Portal/Views/Campaigns/Create.cshtml
@@ -15,7 +15,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="card">
@@ -49,9 +49,9 @@
                             </div>
                             
                             <div class="mb-3">
-                                <label asp-for="ImageUrl" class="form-label">@LocalizationService.GetString("ImageUrl")</label>
-                                <input asp-for="ImageUrl" class="form-control" placeholder="https://..." />
-                                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                                <label asp-for="ImageFile" class="form-label">@LocalizationService.GetString("CampaignImage")</label>
+                                <input asp-for="ImageFile" class="form-control" type="file" accept="image/*" />
+                                <span asp-validation-for="ImageFile" class="text-danger"></span>
                             </div>
                             
                             <div class="row mb-3">
@@ -105,6 +105,11 @@
                         <!-- Rules Tab -->
                         <div class="tab-pane fade" id="rules" role="tabpanel">
                             <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <label asp-for="TargetAudience" class="form-label">@LocalizationService.GetString("TargetAudience")</label>
+                                    <select asp-for="TargetAudience" class="form-select" asp-items="Html.GetEnumSelectList<Talabi.Core.Enums.TargetAudience>()">
+                                    </select>
+                                </div>
                                 <div class="col-md-6">
                                     <label asp-for="VendorType" class="form-label">@LocalizationService.GetString("VendorTypeRestriction")</label>
                                      <select asp-for="VendorType" class="form-select">
